--- a/package.json
+++ b/package.json
@@ -10,36 +10,36 @@
   },
   "type": "module",
   "devDependencies": {
-    "solid-start-node": "^0.2.21",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.2",
+    "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.34.0",
     "eslint-plugin-solid": "^0.9.4",
-    "@types/node": "^18.14.0",
-    "solid-start-vercel": "^0.2.21",
-    "prisma": "^4.10.1",
-    "tailwindcss": "^3.2.7",
     "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.13"
+    "prisma": "^4.10.1",
+    "solid-start-node": "^0.2.21",
+    "solid-start-vercel": "^0.2.21",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.2"
   },
   "dependencies": {
-    "@solidjs/meta": "^0.28.2",
-    "@solidjs/router": "^0.7.0",
-    "solid-js": "^1.6.11",
-    "solid-start": "^0.2.21",
-    "undici": "5.20.0",
-    "zod": "^3.20.6",
+    "@adeora/solid-query": "^0.20.0",
     "@auth/core": "^0.4.0",
     "@auth/solid-start": "^0.1.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
-    "solid-trpc": "0.1.0-sssr.6",
-    "@adeora/solid-query": "0.19.0",
-    "solid-start-trpc": "^0.0.16",
-    "@trpc/client": "^10.12.0",
-    "@trpc/server": "^10.12.0"
+    "@prpc/solid": "^0.1.3",
+    "@solidjs/meta": "^0.28.2",
+    "@solidjs/router": "^0.7.0",
+    "add": "^2.0.6",
+    "date-fns": "^2.29.3",
+    "solid-js": "^1.6.11",
+    "solid-start": "^0.2.21",
+    "undici": "5.20.0",
+    "yarn": "^1.22.19",
+    "zod": "^3.20.6"
   },
   "engines": {
     "node": ">=16"
